--- a/app/views/agreements/_form.html.slim
+++ b/app/views/agreements/_form.html.slim
@@ -1,13 +1,14 @@
 = form_for(agreement) do |form|
-  = render(Form::InputGroup::SelectComponent.new(:form => form, :attribute => :customer_id, :collection => Customer.order(:company_name), :text_method => :company_name, :value_method => :id))
-  = render(Form::InputGroup::SelectComponent.new(:form => form, :attribute => :service_id, :collection => Service.order(:name), :text_method => :name, :value_method => :id))
-  = render(Form::InputGroup::Component.new(:form => form, :attribute => :project_name))
-  = render(Form::InputGroup::Component.new(:form => form, :attribute => :price))
-  = render(Form::InputGroup::Component.new(:form => form, :attribute => :discount_percentage))
-  = render(Form::UnitSelectorComponent.new(:form => form, :attribute => :unit))
-  = render(Form::InputGroup::DateComponent.new(:form => form, :attribute => :ends_on))
-  = render(Form::InputGroup::SelectComponent.new(:form => form, :attribute => :state, :collection => Agreement::STATES))
-  = render(Form::InputGroup::Component.new(:form => form, :attribute => :purchase_order_number))
+  div class="space-y-6"
+    = render(Form::InputGroup::SelectComponent.new(:form => form, :attribute => :customer_id, :collection => Customer.order(:company_name), :text_method => :company_name, :value_method => :id))
+    = render(Form::InputGroup::SelectComponent.new(:form => form, :attribute => :service_id, :collection => Service.order(:name), :text_method => :name, :value_method => :id))
+    = render(Form::InputGroup::Component.new(:form => form, :attribute => :project_name))
+    = render(Form::InputGroup::Component.new(:form => form, :attribute => :price))
+    = render(Form::InputGroup::Component.new(:form => form, :attribute => :discount_percentage))
+    = render(Form::UnitSelectorComponent.new(:form => form, :attribute => :unit))
+    = render(Form::InputGroup::DateComponent.new(:form => form, :attribute => :ends_on))
+    = render(Form::InputGroup::SelectComponent.new(:form => form, :attribute => :state, :collection => Agreement::STATES))
+    = render(Form::InputGroup::Component.new(:form => form, :attribute => :purchase_order_number))
 
   div class="pt-5 mt-8 border-t border-gray-200"
     div class="flex justify-end"
