--- a/app/views/customers/_form.html.slim
+++ b/app/views/customers/_form.html.slim
@@ -1,11 +1,12 @@
 = form_for(customer) do |form|
-  = render(Form::InputGroup::Component.new(:form => form, :attribute => :company_name))
-  = render(Form::InputGroup::SelectComponent.new(:form => form, :attribute => :tax_region, :collection => Customer::TAX_REGIONS))
-  = render(Form::InputGroup::Component.new(:form => form, :attribute => :tax_id))
-  = render(Form::InputGroup::EmailComponent.new(:form => form, :attribute => :invoice_email))
-  = render(Form::InputGroup::PhoneComponent.new(:form => form, :attribute => :phone))
-  = render(Form::InputGroup::TextareaComponent.new(:form => form, :attribute => :address))
-  = render(Form::InputGroup::Component.new(:form => form, :attribute => :economic_debtor_number))
+  div class="space-y-6"
+    = render(Form::InputGroup::Component.new(:form => form, :attribute => :company_name))
+    = render(Form::InputGroup::SelectComponent.new(:form => form, :attribute => :tax_region, :collection => Customer::TAX_REGIONS))
+    = render(Form::InputGroup::Component.new(:form => form, :attribute => :tax_id))
+    = render(Form::InputGroup::EmailComponent.new(:form => form, :attribute => :invoice_email))
+    = render(Form::InputGroup::PhoneComponent.new(:form => form, :attribute => :phone))
+    = render(Form::InputGroup::TextareaComponent.new(:form => form, :attribute => :address))
+    = render(Form::InputGroup::Component.new(:form => form, :attribute => :economic_debtor_number))
 
   div class="pt-5 mt-8 border-t border-gray-200"
     div class="flex justify-end"
