--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -1,7 +1,7 @@
 @import 'tailwindcss';
 
 @import "flowbite/src/themes/default";
-@import "flowbite/plugin";
+@import "flowbite";
 @source "../../../node_modules/flowbite/";
 
 /*
