--- a/app/views/customers/_form.html.slim
+++ b/app/views/customers/_form.html.slim
@@ -1,7 +1,7 @@
 = form_for(customer) do |form|
   div class="space-y-6"
     = render(Flowbite::InputField::Text.new(:form => form, :attribute => :company_name))
-    = render(Form::InputGroup::SelectComponent.new(:form => form, :attribute => :tax_region, :collection => Customer::TAX_REGIONS))
+    = render(Flowbite::InputField::Select.new(:form => form, :attribute => :tax_region, :collection => Customer::TAX_REGIONS))
     = render(Flowbite::InputField::Text.new(:form => form, :attribute => :tax_id))
     = render(Form::InputGroup::EmailComponent.new(:form => form, :attribute => :invoice_email))
     = render(Form::InputGroup::PhoneComponent.new(:form => form, :attribute => :phone))
