--- a/app/views/customers/_form.html.slim
+++ b/app/views/customers/_form.html.slim
@@ -3,7 +3,7 @@
     = render(Flowbite::InputField::Text.new(:form => form, :attribute => :company_name))
     = render(Flowbite::InputField::Select.new(:form => form, :attribute => :tax_region, :collection => Customer::TAX_REGIONS))
     = render(Flowbite::InputField::Text.new(:form => form, :attribute => :tax_id))
-    = render(Form::InputGroup::EmailComponent.new(:form => form, :attribute => :invoice_email))
+    = render(Flowbite::InputField::Email.new(:form => form, :attribute => :invoice_email))
     = render(Form::InputGroup::PhoneComponent.new(:form => form, :attribute => :phone))
     = render(Form::InputGroup::TextareaComponent.new(:form => form, :attribute => :address))
     = render(Flowbite::InputField::Text.new(:form => form, :attribute => :economic_debtor_number))
