--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -12,6 +12,8 @@
     </div>
   </div>
   <div class="mt-8 border-t border-gray-200 pt-5">
+    <%= render(Flowbite::Button.new(:label => "Save", :type => :submit)) %>
+
     <div class="flex justify-end">
       <span class="ml-3 inline-flex rounded-md shadow-xs">
         <%= link_to "Cancel", services_path, :class => "py-2 px-4 border border-gray-300 rounded-md text-sm leading-5 font-medium text-gray-700 hover:text-gray-500 focus:outline-hidden focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-50 active:text-gray-800 transition duration-150 ease-in-out" %>
