Use Flowbite buttons

--- a/lib/templates/slim/scaffold/_form.html.slim
+++ b/lib/templates/slim/scaffold/_form.html.slim
@@ -4,9 +4,5 @@
 <%- end -%>
 
   div class="mt-8 border-t border-gray-200 pt-5"
-    div class="flex justify-end"
-      span class="ml-3 inline-flex rounded-md shadow-sm"
-        = link_to "Cancel", <%= plural_table_name %>_path, :class => "py-2 px-4 border border-gray-300 rounded-md text-sm leading-5 font-medium text-gray-700 hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-50 active:text-gray-800 transition duration-150 ease-in-out"
-
-      span class="ml-3 inline-flex rounded-md shadow-sm"
-        = form.submit "Save", :class => "inline-flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-green-600 hover:bg-green-500 focus:outline-none focus:border-green-700 focus:shadow-outline-green active:bg-green-700 transition duration-150 ease-in-out"
+    = render(Flowbite::Button.new(:label => "Save", :type => :submit))
+    = link_to "Cancel", <%= plural_table_name %>_path, :class => Flowbite::Button::Outline.classes
