--- a/app/views/customers/_form.html.slim
+++ b/app/views/customers/_form.html.slim
@@ -8,10 +8,6 @@
     = render(Flowbite::InputField::Textarea.new(:form => form, :attribute => :address))
     = render(Flowbite::InputField::Text.new(:form => form, :attribute => :economic_debtor_number))
 
-  div class="pt-5 mt-8 border-t border-gray-200"
-    div class="flex justify-end"
-      span class="inline-flex ml-3 rounded-md shadow-xs"
-        = link_to "Cancel", customers_path, :class => "py-2 px-4 border border-gray-300 rounded-md text-sm leading-5 font-medium text-gray-700 hover:text-gray-500 focus:outline-hidden focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-50 active:text-gray-800 transition duration-150 ease-in-out"
-
-      span class="inline-flex ml-3 rounded-md shadow-xs"
-        = form.submit "Save", :class => "inline-flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-green-600 hover:bg-green-500 focus:outline-hidden focus:border-green-700 focus:shadow-outline-green active:bg-green-700 transition duration-150 ease-in-out"
+  div class="mt-8 border-t border-gray-200 pt-5"
+    = render(Flowbite::Button.new(:label => "Save", :type => :submit))
+    = link_to "Cancel", customers_path, :class => Flowbite::Button::Outline.classes
