Add explicit class methods to get CSS classes

--- a/app/views/customers/_form.html.slim
+++ b/app/views/customers/_form.html.slim
@@ -10,4 +10,4 @@
 
   div class="mt-8 border-t border-gray-200 pt-5"
     = render(Flowbite::Button.new(:label => "Save", :type => :submit))
-    = link_to "Cancel", customers_path, :class => Flowbite::Button::Outline.classes
+    = link_to "Cancel", customers_path, :class => Flowbite::Button::Outline.default_classes
