--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -13,6 +13,6 @@
   </div>
   <div class="mt-8 border-t border-gray-200 pt-5">
     <%= render(Flowbite::Button.new(:label => "Save", :type => :submit)) %>
-    <%= link_to "Cancel", services_path, :class => Flowbite::Button::Outline.classes %>
+    <%= link_to "Cancel", services_path, :class => Flowbite::Button::Outline.default_classes %>
   </div>
 <% end %>
