--- a/app/views/agreements/_form.html.slim
+++ b/app/views/agreements/_form.html.slim
@@ -12,4 +12,4 @@
 
   div class="mt-8 border-t border-gray-200 pt-5"
     = render(Flowbite::Button.new(:label => "Save", :type => :submit))
-    = link_to "Cancel", agreements_path, :class => Flowbite::Button::Outline.classes
+    = link_to "Cancel", agreements_path, :class => Flowbite::Button::Outline.default_classes
