--- a/lib/templates/slim/scaffold/_form.html.slim
+++ b/lib/templates/slim/scaffold/_form.html.slim
@@ -5,4 +5,4 @@
 
   div class="mt-8 border-t border-gray-200 pt-5"
     = render(Flowbite::Button.new(:label => "Save", :type => :submit))
-    = link_to "Cancel", <%= plural_table_name %>_path, :class => Flowbite::Button::Outline.default_classes
+    = link_to "Cancel", <%= plural_table_name %>_path, :class => Flowbite::Button::Outline.classes
