Use the most recent version of Flowbite components
This includes an upgrade to View Component 4

--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -1,8 +1,8 @@
 @import 'tailwindcss';
 
 @import "flowbite/src/themes/default";
-@import "flowbite";
-@source "../../../node_modules/flowbite/";
+@plugin "flowbite/plugin";
+@import "../builds/tailwind/flowbite_components";
 
 /*
 
