--- a/app/views/agreements/_form.html.slim
+++ b/app/views/agreements/_form.html.slim
@@ -1,7 +1,7 @@
 = form_for(agreement) do |form|
   div class="space-y-6"
-    = render(Flowbite::InputField::Select.new(:form => form, :attribute => :customer_id, :collection => Customer.order(:company_name), :text_method => :company_name, :value_method => :id))
-    = render(Flowbite::InputField::Select.new(:form => form, :attribute => :service_id, :collection => Service.order(:name), :text_method => :name, :value_method => :id))
+    = render(Flowbite::InputField::Select.new(:form => form, :attribute => :customer_id, :collection => Customer.order(:company_name).map { |customer| [customer.company_name, customer.id] }))
+    = render(Flowbite::InputField::Select.new(:form => form, :attribute => :service_id, :collection => Service.order(:name).map { |service| [service.name, service.id] }))
     = render(Flowbite::InputField::Text.new(:form => form, :attribute => :project_name))
     = render(Flowbite::InputField::Text.new(:form => form, :attribute => :price))
     = render(Flowbite::InputField::Text.new(:form => form, :attribute => :discount_percentage))
